# aws-deploment-learning

./: Dockerfile  deploy.yaml  pod-create.yaml
poc/: pyproject.toml
poc/src/: main.py
poc/src/config/: app_config.yml  git_config.py
poc/src/model/: db_config.py  user.py
poc/tests/: test_main.py
